tests/ui/not_send.stderr
error[E0277]: `*mut pyo3::Python<'static>` cannot be shared between threads safely
   --> tests/ui/not_send.rs:4:15
    |
  4 |     py.detach(|| { drop(py); });
    |        ------ ^^^^^^^^^^^^^^^^ `*mut pyo3::Python<'static>` cannot be shared between threads safely
    |        |
    |        required by a bound introduced by this call
    |
    = help: within `pyo3::Python<'_>`, the trait `Sync` is not implemented for `*mut pyo3::Python<'static>`
note: required because it appears within the type `PhantomData<*mut pyo3::Python<'static>>`
   --> /Users/david/.rustup/toolchains/stable-aarch64-apple-darwin/lib/rustlib/src/rust/library/core/src/marker.rs:819:12
    |
819 | pub struct PhantomData<T: PointeeSized>;
    |            ^^^^^^^^^^^
note: required because it appears within the type `pyo3::marker::NotSend`
   --> src/marker.rs:357:8
    |
357 | struct NotSend(PhantomData<*mut Python<'static>>);
    |        ^^^^^^^
note: required because it appears within the type `PhantomData<pyo3::marker::NotSend>`
   --> /Users/david/.rustup/toolchains/stable-aarch64-apple-darwin/lib/rustlib/src/rust/library/core/src/marker.rs:819:12
    |
819 | pub struct PhantomData<T: PointeeSized>;
    |            ^^^^^^^^^^^
note: required because it appears within the type `pyo3::Python<'_>`
   --> src/marker.rs:353:12
    |
353 | pub struct Python<'py>(PhantomData<&'py AttachGuard>, PhantomData<NotSend>);
    |            ^^^^^^
    = note: required for `&pyo3::Python<'_>` to implement `Send`
note: required because it's used within this closure
   --> tests/ui/not_send.rs:4:15
    |
  4 |     py.detach(|| { drop(py); });
    |               ^^
    = note: required for `{closure@tests/ui/not_send.rs:4:15: 4:17}` to implement `Ungil`
note: required by a bound in `pyo3::Python::<'py>::detach`
   --> src/marker.rs:560:12
    |
558 |     pub fn detach<T, F>(self, f: F) -> T
    |            ------ required by a bound in this associated function
559 |     where
560 |         F: Ungil + FnOnce() -> T,
    |            ^^^^^ required by this bound in `Python::<'py>::detach`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
